Cleanup code that finds and loads a media engine https://bugs.webkit.org/show_bug.cgi?id=149371

Reviewed by Darin Adler.

No new tests, no functional change.

* Modules/mediastream/MediaStream.cpp:
(WebCore::MediaStream::setRegistry): New, set the registry.
(WebCore::MediaStream::lookup): New, lookup a url in the registry.
* Modules/mediastream/MediaStream.h:

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::loadResource): Restructure and simplify the code that tries the
  different types of media engine so the code is easier to understand and modify.
(WebCore::HTMLMediaElement::createMediaPlayer): Clear m_mediaStreamSrcObject.

* platform/graphics/MediaPlayer.cpp:
(WebCore::buildMediaEnginesVector): Add some whitespace to make it easier to read.
(WebCore::bestMediaEngineForSupportParameters): Also process mediastream and mediasource urls.
(WebCore::MediaPlayer::load): ASSERT if called when the reload timer is active.
(WebCore::MediaPlayer::loadWithNextMediaEngine): Also process mediastream and mediasource urls.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::supportsType): Don't test empty/null urls.

* platform/mock/mediasource/MockMediaPlayerMediaSource.cpp:
(WebCore::MockMediaPlayerMediaSource::supportsType): Ditto.


Canonical link: https://commits.webkit.org/167464@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190020 268f45cc-cd09-0410-ab3c-d52691b4dbfc